Mes 8752 font size fix (#1205)
* Updated test slot to truncate properly on test centre journal

* Updated test slot to truncate properly on test centre journal

--- a/src/components/test-slot/candidate-link/candidate-link.scss
+++ b/src/components/test-slot/candidate-link/candidate-link.scss
@@ -11,8 +11,14 @@
 
     &.candidate-name-portrait {
       max-width: 265px;
+      &.team-journal {
+        max-width: 240px;
+      }
       &.extra-large-mode {
         max-width: 230px;
+        &.team-journal {
+          max-width: 205px;
+        }
       }
     }
 
